--- a/frontend/index.scss
+++ b/frontend/index.scss
@@ -1,5 +1,6 @@
 @import "sanitize.css/sanitize.css";
 @import "leaflet/dist/leaflet.css";
+@import "leaflet-gesture-handling/dist/leaflet-gesture-handling.css";
 
 html {
   margin: 0;
