--- a/frontend/components/app/Shell.module.scss
+++ b/frontend/components/app/Shell.module.scss
@@ -8,6 +8,25 @@
 
 .header {
   flex: 0 0 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  background: black;
+}
+
+.title {
+  margin: 0;
+  padding: 0;
+  font-size: 30px;
+  font-family: 'Goldman', sans-serif;
+  font-weight: 400;
+  color: white;
+}
+
+.logout {
+  justify-self: flex-end;
 }
 
 .main {
