--- a/frontend/index.scss
+++ b/frontend/index.scss
@@ -8,6 +8,8 @@ html {
   padding: 0;
   height: 100%;
   width: 100%;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 body {
@@ -18,6 +20,7 @@ body {
   align-items: stretch;
   justify-content: stretch;
   flex-direction: column;
+  color: white;
 }
 
 #root {
