--- a/frontend/components/common/Text.module.scss
+++ b/frontend/components/common/Text.module.scss
@@ -1,13 +1,18 @@
 .title {
   margin: 0;
   padding: 0;
-  font-size: 30px;
   font-family: 'Goldman', sans-serif;
   font-weight: 400;
   color: white;
+
+  &h1 {
+    font-size: 1.6rem;
+  }
 }
 
-.body {
-  font-family: 'Roboto', sans-serif;
+.label {
+  font-size: 1rem;
+  font-family: 'Goldman', sans-serif;
+  font-weight: 400;
   color: white;
 }
