--- a/frontend/index.scss
+++ b/frontend/index.scss
@@ -8,8 +8,9 @@ html {
   padding: 0;
   height: 100%;
   width: 100%;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.5;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
