--- a/frontend/components/ui/Feedback.module.scss
+++ b/frontend/components/ui/Feedback.module.scss
@@ -1,4 +1,5 @@
 @use "./theme" as theme;
+@use "sass:color";
 
 $gap: 8px;
 
@@ -13,9 +14,9 @@ $closeButtonIconSize: 10px;
   padding: $gap;
   gap: $gap;
   border-radius: 4px;
-  background-color: rgba(35, 33, 65, 0.3);
+  background-color: color.adjust(theme.$surfaceColor, $alpha: -0.5);
   backdrop-filter: blur(16px);
-  border: 1px solid rgba(35, 28, 47, 0.2);
+  border: 1px solid color.adjust(white, $alpha: -0.8);
 
   &[data-variant='success'] {
     .badgeIcon svg {
@@ -106,4 +107,11 @@ $closeButtonIconSize: 10px;
   svg {
     fill: white;
   }
+}
+
+.toastContainer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
