--wip-- [skip ci]

--- a/frontend/components/ui/_theme.scss
+++ b/frontend/components/ui/_theme.scss
@@ -1,4 +1,8 @@
+$primaryColor: #4032dd;
+$secondaryColor: #32ba76;
 $surfaceColor: rgb(18, 16, 50);
+$space: 8px;
+$radius: 12px;
 
 $successColor: #4CAF50;
 $errorColor: #F44336;
