--- a/frontend/components/app/Shell.module.scss
+++ b/frontend/components/app/Shell.module.scss
@@ -25,10 +25,6 @@
   color: white;
 }
 
-.logout {
-  justify-self: flex-end;
-}
-
 .main {
   flex: 1;
   display: block;
@@ -44,4 +40,8 @@
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.spacer {
+  flex: 1;
 }
